adicionar metodos de pagamento

--- a/lead_extractor/templates/lead_extractor/purchase_credits.html
+++ b/lead_extractor/templates/lead_extractor/purchase_credits.html
@@ -132,6 +132,12 @@
             },
             customization: {
                 paymentMethods: {
+                    ticket: 'all',       // Boleto
+                    bankTransfer: 'all', // PIX
+                    creditCard: 'all',
+                    debitCard: 'all',
+                    prepaidCard: 'all',
+                    mercadoPago: 'all',  // Carteira Mercado Pago
                     maxInstallments: 12,
                 },
             },
