--- a/lead_extractor/templates/lead_extractor/purchase_credits.html
+++ b/lead_extractor/templates/lead_extractor/purchase_credits.html
@@ -129,6 +129,7 @@
             initialization: {
                 amount: amount,
                 preferenceId: preferenceId,
+                mercadoPago: mp,
             },
             customization: {
                 paymentMethods: {
