--- a/lead_extractor/templates/lead_extractor/purchase_credits.html
+++ b/lead_extractor/templates/lead_extractor/purchase_credits.html
@@ -47,7 +47,7 @@
         border: none !important;
     }
     #paymentModal .modal-body.status-screen-mode #statusScreenBrick_container {
-        margin: -1.25rem 0 0 0;
+        margin: calc(-1.25rem + 3px) 0 0 0;
         padding: 0;
     }
 </style>
